[gd_scene load_steps=4 format=3 uid="uid://ykbwcdb7yt61"]

[ext_resource type="Script" path="res://scenes/game/pause_menu.gd" id="1_308f8"]
[ext_resource type="Theme" uid="uid://qseykuvemo1o" path="res://resources/themes/normal_text.tres" id="2_23ata"]
[ext_resource type="Theme" uid="uid://cnrdyrlmhr3x0" path="res://resources/themes/button_theme.tres" id="3_plher"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_308f8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_direction = 1
offset_left = 350.0
offset_top = 160.0
offset_right = 930.0
offset_bottom = 570.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.47451)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 160

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_23ata")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_plher")
text = "Continue"

[node name="QuitButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_plher")
text = "Quit
"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
